# ruey

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  diesel.toml  makefile  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml
assets/: Docs.md  ruey-cert.pfx
docs/: index.org
migrations/0000_init/: down.sql  up.sql
src/: app.rs  main.rs  models.rs  schema.rs  state.rs  window.rs
src/actions/: mod.rs
src/models/: actions.rs  kv_store.rs  mod.rs  settings.rs
src/stats/: mod.rs
src/twitch/: api.rs  events.rs  mod.rs  types.rs
src/ui/: mod.rs  state.rs  style.rs  tabs.rs  util.rs
src/ui/tabs/: mod.rs
src/ui/tabs/actions/: mod.rs
src/ui/tabs/chat/: footer.rs  header.rs  history.rs  message.rs  mod.rs
src/ui/tabs/database/: mod.rs
src/ui/tabs/docs/: mod.rs
src/ui/tabs/logs/: mod.rs
src/ui/tabs/settings/: mod.rs
src/ui/tabs/stats/: mod.rs
src/workers/: action.rs  asset.rs  mod.rs  stats.rs  timers.rs  twitch.rs  twitch_irc.rs  twitch_pubsub.rs
